# hive-strategy

./: .env.example  .gitignore  GITHUB-ACCOUNTS.md  PLAN.md
.claude/: settings.json
.claude/commands/: debate.md  review.md  task.md
.claude/commands/auto-programmer/: fix-pr.md
.cursor/rules/: debate.mdc  pr-review.mdc
.github/workflows/: ci-web.yml  ci.yml  pr-review.yml  slack-cost-report.yml  slack-notify.yml
apps/api/: agents.py  main.py  pyproject.toml
apps/api/routes/: analyze.py
apps/web/: package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/analyze/: agent.ts  page.tsx
apps/web/app/analyze/_components/: AgentGrid.tsx
apps/web/app/analyze/_hooks/: useAnalysisStream.ts
apps/web/app/api/analyze/stream/: route.ts
apps/web/features/analyze/: constants.ts
docs/: coding-standards.md  directory-structure.md
skills/pr-review/: debater.py  fixer.py  github.py  main.py  requirements.txt  reviewer.py
