[project]
name = "hive-strategy-api"
version = "0.1.0"
description = "Hive Strategy FastAPI backend — multi-agent Claude API orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
